third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/float/trailing-point-plus.stderr
TOML parse error at line 1, column 26
  |
1 | trailing-point-plus = +1.
  |                          ^
invalid floating-point number
expected digit
